[MID-61] fix layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,23 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
+
+html {
+    margin-right: calc(100% - 100vw);
+}
+
+body {
+    margin-right: calc(100vw - 100%);
+}
+
+@tailwind utilities;
